do xong du lieu tin đăng mới nhất

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1179,17 +1179,26 @@ table .td-info .user-post .username .username-h4 a {
 }
 
 .recentNew {
-  width: 49%;
   display: inline-block;
   border: 1px solid #dfdfdf;
   background: #f9f9f9;
   border-radius: 5px;
   height: auto;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
+  max-width: 48%;
+  margin-right: 10px;
 }
 
 .tieudetintuc {
   margin: 10px 0;
+  display: block;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  overflow: hidden;
+  max-height: 2em;
+  line-height: 1.8em;
+  white-space: nowrap;
+
 }
 
 .tieudetintuc a {
@@ -1209,6 +1218,10 @@ table .td-info .user-post .username .username-h4 a {
   width: 100%;
   padding: 5px 0 5px 5px;
 }
+.gia_tin_dang_tomiot{
+  color: red;
+  font-size: 19px;
+}
 .canTraiNoiDung {
   /*padding: 0;*/
   margin: 0;
@@ -1222,7 +1235,15 @@ table .td-info .user-post .username .username-h4 a {
   /*font-family: Roboto-Regular;*/
 }
 
+.thu_gon_text_tomiot{
+  display: block;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  overflow: hidden;
+  max-height: 14em;
+  line-height: 1.8em;
 
+}
 .imgTinDangMoiNhat {
   display: table-cell;
   vertical-align: top;
@@ -1487,7 +1508,7 @@ table .td-info .user-post .username .username-h4 a {
 
 /* ------------------------END footer*/
 
-/* ------------------------------------ Trang chi tiÃ¡ÂºÂ¿t sÃ¡ÂºÂ£n phÃ¡ÂºÂ©m  ---------------------------  */
+/* ------------------------------------ Trang chi tiet san pham  ---------------------------  */
 .service-title-tomiot {
   line-height: 30px;
   border: 1px solid #ddd;
@@ -1822,7 +1843,7 @@ table .td-info .user-post .username .username-h4 a {
     color: #000;
     font-size: 12px;
 }
-/* Káº¿t thÃºc trang chi tiáº¿t sáº£n pháº©m */
+/* Káº¿t thÃºc trang chi tiet san pham */
 
 
 
@@ -1849,6 +1870,7 @@ table .td-info .user-post .username .username-h4 a {
 }
 .recentNew-Tr{
     background: unset;
+
 }
 
 .allNews-Tr .recentNew-Tr .recent-item-title-Tr{
