xong phần user quản lý kho hàng
hình ảnh khi thêm load sai

--- a/resources/views/User/trangquanlycmt.html
+++ b/resources/views/User/trangquanlycmt.html
@@ -190,15 +190,7 @@
                <div class="row">
                   <!-- MEnu lef quản trị -->
                    <section id="menu-left-L" class="col-md-3 col-lg-2 col-sm-4" style="width: 100%;">
-                       <div class="menu-left-user-L">
-                         <div class="header-account-m"></div>
-                           <ul>
-                             <li><a href="#"><i class="fas fa-store-alt" style="font-size: 14px;padding-right: 9px;"></i>Quản lý kho hàng</a></li>
-                            <li><a href="#"><i class="far fa-file-alt" style="font-size: 16px;padding-right: 8px;padding-left: 3px;"></i> Quản lý tin đăng</a></li>
-                            <li><a href="#"><i class="far fa-comment-alt" style="font-size: 14px;padding-right: 6px;padding-left: 3px;"></i> Quản lý bình luận</a></li>
-                            <li><a href="#"><i class="fas fa-book" style="font-size: 14px;padding-right: 8px;padding-left: 3px;"></i> Quản lý đơn hàng</a></li>
-                         </ul>
-                      </div> 
+                       @include('user.core.menu-left-user-quanly')
                   </section>
                   <!-- Kết  thúc menu left quản trị -->
                   <div class="col-md-9 col-lg-10 col-sm-8 ">
