phần upload tin tức
chưa xử lý path lưu hình ảnh của sp và dịch vụ

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2535,7 +2535,8 @@ table .td-info .user-post .username .username-h4 a {
 }
 
 .post-form-Tr .forum-thread-infor-Tr .fs-wrap {
-  width: 300px;
+  /*width: 300px;*/
+  width: 100%;
 }
 
 .post-form-Tr #location-post-Tr {
