--- a/public/assets/css/product-info.css
+++ b/public/assets/css/product-info.css
@@ -106,7 +106,9 @@
 .view-caring-v {
   text-align: center;
   padding-top: 10px;
+  display: flex;
 }
+
 .view-saved-v {
   padding: 0 5px;
   border: 1px solid #4166b3;
