--- a/public/assets/css/product-info.css
+++ b/public/assets/css/product-info.css
@@ -30,7 +30,29 @@
   height: 430px;
   display: inline-block;
 }
-
+.img-zoom-lens-pro-v {
+  position: absolute;
+  /*set the size of the lens:*/
+  width: 150px;
+  height: 200px;
+  border: 1px solid #555;
+  cursor: crosshair;
+}
+#vinh123{
+  position: absolute;
+}
+.img-zoom-result-v {
+  border: 1px solid #d4d4d4;
+  /*set the size of the result div:*/
+  position: absolute; 
+  overflow: hidden; 
+  opacity: 1; 
+  z-index: 9999; 
+  width: 430px; 
+  height: 430px; 
+  top: 0px; 
+  left: 450px;
+}
 .scroll-small-img-v {
   position: relative;
   width: 100%;
