--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3241,7 +3241,7 @@ output {
             max-width: 890px;
             min-width: 320px;
             height: auto;
-            z-index: 2000;
+            z-index: 1100;
             visibility: hidden;
             -webkit-backface-visibility: hidden;
             -moz-backface-visibility: hidden;
@@ -3308,10 +3308,11 @@ output {
               /*set the size of the lens:*/
               width: 180px;
               height: 180px;
+              cursor: zoom-in;
             }
             #myresult-div{
                 opacity: 1 !important;
-                z-index: 1;
+                z-index: 1101;
             }
             .img-zoom-result {
                 opacity: 1 !important;
@@ -3391,9 +3392,9 @@ output {
 
 /*Model - order view */
 .md-modal2 {
-    top: 10%;
+    top: 8%;
     left: 2%;
-    
+     z-index: 1200;
             /*position: fixed;
             top: 28%;
             left: 50%;
@@ -3401,7 +3402,7 @@ output {
             max-width: 790px !important;
             min-width: 320px;
             visibility: hidden;*/
-            z-index: 2300;
+           
             /*-webkit-backface-visibility: hidden;
             -moz-backface-visibility: hidden;
             backface-visibility: hidden;
@@ -3417,7 +3418,7 @@ output {
             visibility: hidden;
             top: 0;
             left: 0;
-            z-index: 2200;
+            z-index: 1200;
             opacity: 0;
             background: rgba(59, 56, 56, 0.5);
             -webkit-transition: all 0.1s;
@@ -3429,8 +3430,22 @@ output {
             opacity: 1;
             visibility: visible;
         }*/
+/*.modal:nth-of-type(even) {
+    z-index: 1201 !important;
+}
+.modal-backdrop.show:nth-of-type(even) {
+    z-index: 1200 !important;
+}*/
+.modal-backdrop.show {
+    opacity: 0.5 !important;
+    position: fixed;
+    z-index: 1199 !important;
+}
 #modal-orderview {
     height: auto;
+    overflow-y:auto;
+    /*margin: 0 !important;
+    padding: 0 !important;*/
            /* margin: 60px auto 20px auto;
             
             padding: 10px;
@@ -3482,16 +3497,38 @@ output {
     padding: 6px 16px;
 }
     /* step 2*/
-#modal-orderview table tr td{
-    padding: 6px 16px;
+#modal-orderview #step2 table tr td{
+    padding: 6px;
 }
 #modal-orderview .input-step2{
     border: 1px solid #a0a0a0;
-    padding: 2px;
+    padding: 3px 8px;
     border-radius: 2px;
-    left: 0;
-    padding-left: 0;
     float: left;
+}
+
+/*step 3*/
+#modal-orderview #step3 p {
+    padding: 0;margin: 0;
+    font-size: 13.5px;
+    line-height: 1.6em;
+    letter-spacing: 0.01em;
+}
+#modal-orderview #step3 b{
+    font-weight: bold;
+}
+#modal-orderview #step3 table tr td {
+    font-size: 13.5px;
+    line-height: 1.6em;
+    text-align: left;
+}
+#modal-orderview #step3 #ordertable-L th,td{
+    text-align: center;
+    padding: 4px;
+}
+#modal-orderview #step3 #ordertable-L td{
+    text-align: center;
+    padding: 4px;
 }
 /* END Modal - order view */
 
