--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2952,7 +2952,7 @@ table .td-info .user-post .username .username-h4 a {
 }
 
 .comment-L ul.comments-list {
-  border-left: 1px solid#999999; /*c3c3c3*/
+  border-left: 1px solid #c3c3c3; /*c3c3c3*/
   margin: 0px 0px 8px 50px !important;
 }
 .comment-L .input-reply {
