--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -277,7 +277,124 @@ button {
   text-transform: uppercase;
 }
 
-/****************END HEADER*****************/
+/* Khi đã đăng nhập thay đổi chữ "Đăng ký" "Đăng nhập" trên header thành icon notifications/user/$ */
+/* === notifications icon on header === */
+.heading-notifications-L{
+    font-size: 12px;
+    font-weight: bold;
+    color: #403f3f;
+    line-height: 22px;
+    letter-spacing: 0.02em;
+    padding-bottom: 12px;
+}
+.body-notifications-L{
+    overflow-y: auto;
+    max-height: 240px;
+}
+.p-bodynotification-L{
+    font-family: "Open Sans", Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 12px;
+    padding: 0;
+    margin: 0;
+}
+.notification-time-L{
+    font-size: 11px;
+    color: #7b7777;
+    padding: 3px 0 0 0;
+    margin: 0;
+}
+.footer-notifications-L{
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 22px;
+    padding: 0 3px 22px 3px;
+}
+/* === scrollbar of this notifications */
+/* width */
+.body-notifications-L::-webkit-scrollbar {
+  width: 10px;
+}
+/* Track */
+.body-notifications-L::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+/* Handle */
+.body-notifications-L::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+/* Handle on hover */
+.body-notifications-L::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+.item-notifications-L{
+    cursor: pointer;
+}
+/* === END notifications icon on header === */
+
+/* === User icon on header === */
+.heading-profile-L{
+    padding: 8px;
+    font-size: 13px;
+}
+.profileheader-info-L {
+    float: left;
+    padding: 8px 8px 8px 16px;
+}
+.profileheader-info-L p{
+    line-height: 6px;
+}
+.body-profile-L{
+    padding: 8px 4px 4px 8px;
+    font-size: 13px;
+}
+.body-profile-L table tr td{
+    text-align: left;
+    line-height: 20px;
+}
+/* === END User icon on header === */
+
+/* === Money icon on header === */
+.body-yourcoin-L{
+    padding: 10px 10px 0px 10px;
+}
+.body-yourcoin-L btn{
+    transition: box-shadow 0.3s;
+    background: #ff6600;
+    padding: 6px 40px;
+    font-size: 14px;
+    border: 1px solid #ff6600;
+    color: #fff;
+    font-weight: 500;
+    margin-bottom: 8px;
+}
+.body-yourcoin-L btn:hover{
+    background: rgb(253, 128, 50);
+    border: 1px solid #fd8032;
+    box-shadow: 0 0 11px rgba(237, 99, 7,0.4);
+}
+.body-yourcoin-L p, .hover-p-yourcoin p{
+    font-size: 15px;
+    font-weight: 400;
+    padding: 0;
+    margin: 0;
+    line-height: 36px;
+    transition: box-shadow 0.3s;
+}
+.hover-p-yourcoin p:hover{
+    background: #ff7214;
+    box-shadow: 0 0 11px rgba(237, 99, 7,0.4);
+    margin-left: -21px;
+    margin-right: -21px;
+    margin-bottom: -8px;
+    padding: 4px 10px;
+}
+.hover-p-yourcoin p a:hover{
+    color: #fff;
+    text-decoration: none;
+}
+/* === END Money icon on header === */
+/* =========== END icon notifications/user/$ */
+/*****************************END HEADER*****************/
 
 /*************Section All category*****************/
 
@@ -3393,7 +3510,8 @@ output {
               font-weight: bold;
               text-align: center;
             vertical-align: middle;
-              margin-top: 2.5%;
+              margin-top: 2.7%;
+              margin-right: 5%;
               margin-bottom: 0px;
           }
           #modal-productinfo-L .productinfo-attention {
