--- a/public/assets/css/gianhangcuchuoing.css
+++ b/public/assets/css/gianhangcuchuoing.css
@@ -483,7 +483,7 @@
   background-color: white;
   opacity: 0.9;
 }
-.close-1 {
+.close-login-btn {
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -491,7 +491,7 @@
   position: absolute;
   opacity: 1;
   z-index: 9999;
-  top: 0px;
+  top: 10px;
   right: -10px;
 }
 .close-login-v {
