--- a/public/assets/css/gianhangcuchuoing.css
+++ b/public/assets/css/gianhangcuchuoing.css
@@ -276,6 +276,7 @@
   text-transform: uppercase;
   border-bottom: 1px solid #ccc;
   padding-bottom: 10px;
+  padding-left: 10px;
   margin-bottom: 15px;
   margin-top: 30px;
 }
