--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1805,6 +1805,8 @@ table .td-info .user-post .username .username-h4 a {
   border-radius: 10px;
 }
 
+.owl
+
 .post-address {
   margin: 0;
   padding-top: 10px;
