--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1303,7 +1303,8 @@ table .td-info .user-post .username .username-h4 a {
 .avatar-sp-L {
   padding-bottom: 5px;
   display: inline-block;
-  position: relative;
+  /*position: relative;*/
+  width: 100%;
 }
 /**/
 .title-sp-L {
