--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1302,9 +1302,9 @@ table .td-info .user-post .username .username-h4 a {
   min-height: 320px;
 }
 .avatar-sp-L {
-  /*padding-bottom: 5px;
+  padding-bottom: 5px;
   display: inline-block;
-  position: relative;*/
+  /*position: relative;*/
   width: 100%;
 }
 
